Implement new main class